test/seq/cmdlists/invalid_freq2.err
SyntaxError: Missing frequency unit
Line: 3, Column: 18
freq(10) = 200.0 
                 ^
